syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

message CGFriendsRankInfoProto {
  optional int32 msgType=1 [default = 24017];//协议类型  
}